# fractals-simd

./: CMakeLists.txt  README.md  avx2.cpp  demo.cpp  fractals-simd.cpp  fractals-simd.h  generate_readme_images.sh  sse3.cpp
scripts/: generate-mandelbrot-iterations-animation.sh  generate-mandelbrot-zooming-animation.sh
